--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -43,7 +43,7 @@ body{
 </div>
 <hr></hr>
 <div class="container addevent">
-  <h2 class="h2 abcd">Have anything  in mind?? Post it..</h2>
+  <h2 class="h2 abcd">Have anything  in mind?? Post it...</h2>
     <form class="align" action="/event" method="post">
         <table class="align">
        <tr><td>Title: </td><td><input name="title" type="text" /></td></tr>
