--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -38,7 +38,7 @@ body{
 </head>
 <body>
   <div class="container align">
-      <h1 class="h1">Welcome to Cloud Saints application</h1>
+      <h1 class="h1">Welcome to Cloud Saint's application</h1>
     {{{body}}}
 </div>
 <hr></hr>
