--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -46,7 +46,7 @@ body{
   <h2 class="h2 abcd">Have anything  in mind?? Post it..</h2>
     <form class="align" action="/event" method="post">
         <table class="align">
-       <tr><td>Title: </td><td><input name="title" type="text" /></td></tr>
+       <tr><td>Name: </td><td><input name="title" type="text" /></td></tr>
        <tr><td>Description: </td><td><input name="description" type="text" /></td></tr></table>
        <br />
        <br/>
