added small change

--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -51,7 +51,9 @@ body{
        <br />
        <br/>
         <input class="btn btn-primary submit-but" type="submit" name="submit" value="submit" />
-        
+        <br>
+        <h2>Thankyou, Have a nice day.</h2>
+        <br>
     </form>
   </div>
 </body>
