small change in external to check ci/cd

--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -52,7 +52,7 @@ body{
        <br/>
         <input class="btn btn-primary submit-but" type="submit" name="submit" value="submit" />
         <br>
-        <h2>Thankyou, Have a nice day.</h2>
+        <h2>Thankyou, Have a nice day. Visit again later.</h2>
         <br>
     </form>
   </div>
